# kinetic

./: CMakeLists.txt  LICENSE  README.md  deploy.sh  prompt.md
.test/: kinetic.cmake
.test/src/main/: AndroidManifest.xml
.test/src/main/cpp/audio/: AudioEngine.cpp
.test/src/main/cpp/gl/: Renderer.cpp
.test/src/main/cpp/include/: common.hpp
.test/src/main/kotlin/com/testapp/: PlayerControls.kt  PlayerViewModel.kt  VisualizerSurface.kt
.test/src/main/res/drawable/: ic_launcher.xml
.test/src/main/res/values/: colors.xml
TESTAPP/src/main/cpp/audio/: AudioEngine.hpp
TESTAPP/src/main/cpp/bridge/: JniBridge.cpp
TESTAPP/src/main/cpp/gl/: Renderer.hpp
TESTAPP/src/main/java/com/testapp/: TrackInfo.java
TESTAPP/src/main/kotlin/com/testapp/: MainActivity.kt
TESTAPP/src/main/res/values/: strings.xml  themes.xml
src/: bridge.cpp  kinetic.cpp  kinetic.h  kinetic.hpp  main.c  main.cpp
src/c/: color.c  kinetic_c.c
src/cli/: cli_parser.cpp  cli_parser.hpp  help_printer.cpp  help_printer.cpp.version_patch.py  help_printer.hpp
src/config/: cmake_parser.cpp  cmake_parser.hpp  config_model.cpp  config_model.hpp
src/copy/: essential_manifest.cpp  essential_manifest.hpp  file_copier.cpp  file_copier.hpp
src/core/: engine.cpp  engine.hpp  phase_registry.cpp  phase_registry.hpp  phase_timer.cpp  phase_timer.hpp  telemetry.cpp  telemetry.hpp
src/dag/: dag.cpp  dag.hpp  executor.cpp  executor.hpp  fshasher.cpp  fshasher.hpp  phase.hpp
src/env/: aapt2_resolver.cpp  aapt2_resolver.hpp  env_scanner.cpp  env_scanner.hpp
src/error/: error_c.c  error_codes.hpp  error_reporter.cpp  error_reporter.hpp  hints.hpp
src/phases/: phase_apk_pack.cpp  phase_apk_pack.hpp  phase_asset_copy.cpp  phase_asset_copy.hpp  phase_cmake_parse.cpp  phase_cmake_parse.hpp  phase_dex_convert.cpp  phase_dex_convert.hpp  phase_env_scan.cpp  phase_env_scan.hpp  phase_java_compile.cpp  phase_java_compile.hpp  phase_kotlin_compile.cpp  phase_kotlin_compile.hpp  phase_link_aprs.cpp  phase_link_aprs.hpp  phase_manifest_merge.cpp  phase_manifest_merge.hpp  phase_ndk_compile.cpp  phase_ndk_compile.hpp  phase_res_compile.cpp  phase_res_compile.hpp  phase_sign_align.cpp  phase_sign_align.hpp  phase_so_copy.cpp  phase_so_copy.hpp
src/utils/: process.cpp  process.hpp  process_c.c  sha256.cpp  sha256.hpp  sha256_c.c
tests/: test_cmake_parser  test_cmake_parser.cpp  test_env_scanner  test_env_scanner.cpp  test_env_scanner_new  test_file_copier  test_file_copier.cpp  test_file_copier_new
tests/fixtures/: full_featured.cmake  minimal.cmake
